--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ bower.json
 
 # Ignore pow environment settings
 .powenv
+
+.idea
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
