--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ bower.json
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+config/database.yml
+db/schema.rb
