--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ before_script:
   - cp config/secrets.travis.yml config/secrets.yml
 services:
   - mysql
+script:  
+  - RAILS_ENV=test bundle exec rake db:schema:load --trace
+  - RAILS_ENV=test bundle exec rake master_data:db:migrate
+  - RAILS_ENV=test bundle exec rspec spec/
