fix travis config

--- a/config/secrets.travis.yml
+++ b/config/secrets.travis.yml
@@ -6,3 +6,4 @@ test:
   slack_chat_token: abcd-0123456798-0123456789-0123456789-123abc
   slack_chat_channel_id: ABCDEF012
   app_name: Gadzorg RoR Template
+  cas_provider_url: auth-nop-op.gadz.org:443
