--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ config/initializers/secret_token.rb
 config/secrets.yml
 config/gapps/**/*.json
 config/gapps/**/*.yml
+config/rabbitmq.yml
 
 ## Environment normalisation:
 /.bundle
