--- a/app.json
+++ b/app.json
@@ -77,15 +77,11 @@
   "formation": {
     "web": {
       "quantity": 1,
-      "size": "Standard-1X"
+      "size": "hobby"
     },
     "service_rabbitmq": {
       "quantity": 1,
-      "size": "Standard-1X"
-    },
-    "worker": {
-      "quantity": 0,
-      "size": "Standard-1X"
+      "size": "hobby"
     }
   },
   "addons": [
