fix app title in langing page

--- a/config/secrets.yml.template
+++ b/config/secrets.yml.template
@@ -5,7 +5,7 @@ development:
   gram_api_password:
   slack_chat_token: abcd-0123456798-0123456789-0123456789-123abc
   slack_chat_channel_id: ABCDEF012
-  app_name: Gadzorg RoR Template
+  app_name: GorgMail Dev
   cas_provider_url:
 
 test:
@@ -15,7 +15,7 @@ test:
   gram_api_password:
   slack_chat_token: abcd-0123456798-0123456789-0123456789-123abc
   slack_chat_channel_id: ABCDEF012
-  app_name: Gadzorg RoR Template
+  app_name: GorgMail Test
   cas_provider_url:
 
 production:
