--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ services:
 script:  
   - RAILS_ENV=test bundle exec rake db:migrate
   - RAILS_ENV=test bundle exec rspec spec/
+  - RAILS_ENV=test bundle exec cucumber
