--- a/config/secrets.travis.yml
+++ b/config/secrets.travis.yml
@@ -7,3 +7,5 @@ test:
   slack_chat_channel_id: ABCDEF012
   app_name: Gadzorg RoR Template
   cas_provider_url: auth-nop-op.gadz.org:443
+  api_user: user
+  api_password: password
