--- a/config/secrets.travis.yml
+++ b/config/secrets.travis.yml
@@ -9,3 +9,4 @@ test:
   cas_provider_url: auth-nop-op.gadz.org:443
   api_user: user
   api_password: password
+  my_url: "http://gorgmail.example.com"
