--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ services:
   - rabbitmq
 script:  
   - RAILS_ENV=test bundle exec rake db:migrate
+  - RAILS_ENV=test bundle exec rake db:seed
   - RAILS_ENV=test bundle exec rspec spec/
   - RAILS_ENV=test bundle exec cucumber
