Travis: modernize configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,38 @@
-language: ruby
-cache: bundler
-rvm:
-  - 2.2.2
-before_install: gem install bundler -v 1.11.2
-install: bundle install --jobs=3 --retry=3 --deployment --without development
+language: ruby # version from .ruby-version
+
+cache:
+  - bundler
+
+sudo: required # required for starting rabbitmq
+
+services:
+  - mysql
+  - rabbitmq
+
 addons:
-    code_climate:
-        repo_token: 8a2a969cd1d481fbc952943cc27b54584b2f27217ea2e2905e77652d44c502be
-before_script:
+  apt:
+    packages:
+      - rabbitmq-server
+  code_climate:
+    repo_token: 8a2a969cd1d481fbc952943cc27b54584b2f27217ea2e2905e77652d44c502be
+
+before_install:
+  # don't use bundler 2 yet https://docs.travis-ci.com/user/languages/ruby/#bundler-20
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '< 2'
+
   - mysql -e 'create database myapp_test;'
   - cp config/database.travis.yml config/database.yml
   - cp config/secrets.travis.yml config/secrets.yml
   - cp config/rabbitmq.travis.yml config/rabbitmq.yml
-services:
-  - mysql
-  - rabbitmq
+
+  - env | sort
+
+install:
+    - bundle install --jobs=3 --retry=3 --deployment --without development
+
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate
-  - RAILS_ENV=test bundle exec rake db:seed
-  - RAILS_ENV=test bundle exec rspec spec/
-  - RAILS_ENV=test bundle exec cucumber
+  - bundle exec rake db:migrate
+  - RAILS_ENV=test NO_COVERAGE=1 bundle exec rake db:seed
+  - RAILS_ENV=test NO_COVERAGE=1 bundle exec rspec
+  - RAILS_ENV=test NO_COVERAGE=1 bundle exec cucumber
